Bug 81487 - pasting into 2nd or later outline level crashes impress
Summary: pasting into 2nd or later outline level crashes impress
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
4.2.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:4.4.0
Keywords:
Depends on:
Blocks:
 
Reported: 2014-07-18 08:54 UTC by Caolán McNamara
Modified: 2015-03-31 20:48 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
reproducer.odp (12.07 KB, application/vnd.oasis.opendocument.presentation)
2014-07-18 08:54 UTC, Caolán McNamara
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Caolán McNamara 2014-07-18 08:54:34 UTC
Created attachment 103024 [details]
reproducer.odp

If the 2nd slide has to title and so the auto creation of that will indirectly invalidate all the para iterators of the outline and "bad things happen"

load document, switch to outline view, put mouse on 2nd line, paste in some text, (not typing, pasting)

bad::alloc, or straight forward crash, or text appears for a moment and then is replaced with a blank again.
Comment 1 Commit Notification 2014-07-18 09:02:15 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a5793f5e0013b156600fd718d8f77870a9e73032

Resolves: fdo#81487 pasting into outline view crashes impress



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.