Resolves: fdo#81487 pasting into outline view crashes impress

CreateTitleTextObject will call indirectly ImpPageChange which
triggers tools::EventMultiplexerEvent::EID_PAGE_ORDER and so
in outlview.cxx without ignore page changes level in action
the outliner is filled in from the slide contents in
FillOutliner clearing the outliner contents and filling it
fresh, but..

a) this hack tower is not prepared for all the outliner
iterators to become invalid
b) the contents of this title object is empty, because
it was just created, and we didn't get a chance to fill
in its text.

This all works for typing vs pasting because the KeyInput
uses the OutlineViewPageChangesGuard guard which sets the
ignore pages changes bit.

So, given that OutlineView::UpdateDocument expects
the iterators of the outliner to be valid during
the lifetime of the method lock the full method with
the OutlineViewPageChangesGuard guard

Change-Id: Iecbf37d54f5f0c5a181be5f27832f769a3d2e389